--- a/python/flask_project/templates/create_university.html
+++ b/python/flask_project/templates/create_university.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Create Student</title>
+    <title>Create University</title>
 </head>
 <body>
-    <h1>Student</h1>
+    <h1>University</h1>
     <form method="POST">
     <table>
         {% for field in form %}
